@@ -2,6 +2,7 @@ package players.heuristics;
 
 import core.AbstractGameState;
 import core.interfaces.IStateHeuristic;
+import games.loveletter.LoveLetterGameState;
 import games.tictactoe.TicTacToeGameState;
 
 import javax.tools.*;
@@ -15,33 +16,68 @@ import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.util.Arrays;
+import java.util.List;
 
 public class StringHeuristic implements IStateHeuristic {
 
-    private String fileName;
+    private String className = "TicTacToeEvaluator";
+    private String fileName = "llm/" + className + ".java";
+
     private String str;
 
     Object heuristicClass;
     Method heuristicFunction;
 
-    public StringHeuristic(String fileName) {
+
+    public String getFileName() {
+        return fileName;
+    }
+
+    public void setFileName(String fileName) {
+        this.fileName = fileName;
+    }
+
+    public String getHeuristicCode() {
+        return str;
+    }
+
+    public void setHeuristicCode(String s) {
+        this.str = s;
+        compile();
+    }
+
+    public StringHeuristic(String fileName, String className) {
+        this.fileName = fileName;
+        this.className = className;
+        loadFile();
+        compile();
+    }
+
+    public StringHeuristic() {
+        loadFile();
+        compile();
+    }
+
+    private void loadFile() {
+
         // Read 'str' as whole text in fileName file:
         try {
             BufferedReader reader = new BufferedReader(new FileReader(fileName));
             StringBuilder stringBuilder = new StringBuilder();
             String line;
             while ((line = reader.readLine()) != null) {
-                stringBuilder.append(line);
+                stringBuilder.append(line).append("\n");
             }
             str = stringBuilder.toString();
             reader.close();
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+    }
 
+    private void compile() {
         // Method string
-        String className = fileName.replaceAll(".*/(.*?)\\.java", "$1");
+        //String className = fileName.replaceAll(".*/(.*?)\\.java", "$1");
         String sourceCode = str;
 
         // Compile source code
@@ -57,14 +93,25 @@ public class StringHeuristic implements IStateHeuristic {
             }
         };
 
+        // Prepare a custom diagnostic listener that ignores notes on annotations
+        DiagnosticListener<JavaFileObject> diagnosticListener = new DiagnosticListener<JavaFileObject>() {
+            @Override
+            public void report(Diagnostic<? extends JavaFileObject> diagnostic) {
+                if (diagnostic.getKind() != Diagnostic.Kind.NOTE) {
+                    System.out.println(diagnostic.getMessage(null));
+                } else {
+                    System.out.println("Heuristic loaded: " + fileName);
+                }
+            }
+        };
+
         // Compile the source code
-        JavaCompiler.CompilationTask task = compiler.getTask(null, fileManager, null, null, null, Arrays.asList(javaFileObject));
+        JavaCompiler.CompilationTask task = compiler.getTask(null, fileManager, diagnosticListener, null, null, List.of(javaFileObject));
         if (!task.call()) {
             throw new RuntimeException("Compilation failed.");
         }
 
         // Load the compiled class
-//        ClassLoader classLoader = ToolProvider.getSystemToolClassLoader();
         try {
             URLClassLoader classLoader = URLClassLoader.newInstance(new URL[] { new File("").toURI().toURL() });
 
@@ -74,7 +121,10 @@ public class StringHeuristic implements IStateHeuristic {
             heuristicClass = dynamicClass.getDeclaredConstructor().newInstance();
 
             // Find and invoke the method using reflection
-            heuristicFunction = dynamicClass.getMethod("evaluateState", TicTacToeGameState.class, int.class);
+            if(className.equalsIgnoreCase("TicTacToeEvaluator"))
+                heuristicFunction = dynamicClass.getMethod("evaluateState", TicTacToeGameState.class, int.class);
+            else if(className.equalsIgnoreCase("LoveLetterEvaluator"))
+                heuristicFunction = dynamicClass.getMethod("evaluateState", LoveLetterGameState.class, int.class);
 
         } catch (ClassNotFoundException | InvocationTargetException | InstantiationException | IllegalAccessException |
                  NoSuchMethodException | MalformedURLException e) {
@@ -85,7 +135,7 @@ public class StringHeuristic implements IStateHeuristic {
     @Override
     public double evaluateState(AbstractGameState gs, int playerId) {
         try {
-            return (double) heuristicFunction.invoke(heuristicClass, (TicTacToeGameState)gs, playerId);
+            return (double) heuristicFunction.invoke(heuristicClass, gs, playerId);
         } catch (IllegalAccessException | InvocationTargetException e) {
             throw new RuntimeException(e);
         }
